# CDS

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  run_sq.sh  sonar-project.properties  tests2.cpp  wTests.cpp
.github/workflows/: cpp_11_all_sonarcloud.yml  cpp_14_all_sonarcloud.yml  cpp_17_all_sonarcloud.yml  cpp_20_all_sonarcloud.yml  main.yml  sonarcloud.yml
doc/design/overview/: FullAbstract.puml  cds.puml
include/: Array  BTree  Boolean  Collection  Double  Float  HashMap  Integer  JSON  LinkedList  List  Long  Map  Object  OrderedSet  Pair  Pointer  Range  Reference  Set  SetBase  String  UnorderedSet
include/CDS/: AbstractStream  Array  Async  Atomic  BTree  Boolean  Collection  Comparator  Compiler  Concepts  Conversion  CopyConstructor  Debug  Destructor  Double  DoubleLinkedList  Exception  Extractor  File  Float  Function  FunctionalInterface  FunctorInterface  Generator  HashMap  HashSet  Hasher  InputStream  Integer  Iterable  JSON  Limits  LinkedHashMap  LinkedHashSet  LinkedList  List  ListSet  LockGuard  Long  Map  (+43 more)
include/CDS/allocators/: LeakDetectionAllocator
include/CDS/crypto/: AES  AsymmetricCryptoOperation  CryptoBlock  CryptoOperation  Decryptor  Encryptor  Hasher  SignatureGenerator  SignatureVerifier  SymmetricCryptoOperation
include/CDS/exception/: ArithmeticException  DivideByZeroException  Exception  FormatException  IllegalArgumentException  KeyException  NoSuchElementException  NotImplementedException  NullPointerException  OutOfBoundsException  OutOfMemoryException  RuntimeException  TypeException  UnsupportedOperationException
include/CDS/experimental/: Array  Collection  HashMap  HashSet  Iterator  JSON  LinkedHashMap  LinkedHashSet  LinkedList  List  Map  MutableCollection  Object  OrderedSet  Set  String  Traits  TreeMap  TreeSet  Tuple  UnorderedSet  View
include/CDS/filesystem/: Path  Walk
include/CDS/memory/: Allocation  AtomicSharedPointer  ForeignPointer  RawPointer  Reference  SharedPointer  SmartPointer  UniquePointer  WeakPointer
include/CDS/meta/: FunctionTraits  TypeTraits
include/CDS/pointer/: AtomicSharedPointer  ForeignPointer  SharedPointer  SmartPointer  UniquePointer
include/CDS/smartPointers/: ForeignPointer  SmartPointer
include/CDS/threading/: Atomic  Lock  Mutex  Thread
include/CDS/util/: JSON
include/cds/: Object  String  StringView  Utility
include/cds/functional/: Comparator  FunctionalInterface  Hash  Invoke  Transformer
include/cds/iterator/: AddressIterator  FwdNodeIterator  HashTableIterator  Iterator  Sentinel
include/cds/memory/: Allocator  ByteStorage
include/cds/meta/: Base  Compiler  IteratorTraits  ObjectTraits  Semantics  StdLib  StringTraits
src/: prepro.h  std-types.h
src/algorithm/: GenericContains.hpp  GenericFind.hpp  GenericLoop.hpp
src/bindings/: BindingSelectors.hpp
src/bindings/static/: ContainsOfStaticBinding.hpp  FindOfStaticBinding.hpp  FindStaticBinding.hpp  GenericLoopBinding.hpp
src/cdsIntern/: Concepts.hpp  Conversion.hpp  Debug.hpp  Exception.hpp  FunctorInterface.hpp  Limits.hpp  Options.hpp  Platform.hpp  Traits.hpp  Types.hpp  Utility.hpp  Warnings.hpp
src/cdsIntern/compiler/: Compiler.hpp  GNUC.hpp  MSVC.hpp  MinGW.hpp  clang.hpp  gcc.hpp
src/cdsIntern/scripts/: file_formatter.py  unit_test_checker.py
src/cdsIntern/tests/: Test.cpp  Test.h
src/collection/: Collection.hpp  Iterable.hpp  StaticArray.hpp
src/collection/abstract/: Collection.hpp  List.hpp  ListSet.hpp  Map.hpp  Set.hpp
src/collection/collection/: AbstractDelegateIterator.hpp  AbstractIterator.hpp  CollectionConstructs.hpp  (+7 more)
src/common/: StringHash.hpp
src/exception/: ArithmeticException.hpp  DivideByZeroException.hpp  Exception.hpp  FormatException.hpp  IllegalArgumentException.hpp  KeyException.hpp  NoSuchElementException.hpp  NotImplementedException.h  NotImplementedException.hpp  NullPointerException.hpp  OutOfBoundsException.hpp  OutOfMemoryException.hpp  RuntimeException.hpp  TypeException.hpp  UnsupportedOperationException.hpp
src/experimental/: Array.hpp  Collection.hpp  HashMap.hpp  HashSet.hpp  JSON.hpp  LinkedList.hpp  List.hpp  ListSet.hpp  Map.hpp  MutableCollection.hpp  Object.hpp  OrderedSet.hpp  Set.hpp  String.hpp  Tuple.hpp  UnorderedSet.hpp  View.hpp
src/functional/: ArgumentParser.hpp  Comparator.hpp  CopyConstructor.hpp  Destructor.hpp  Extractor.hpp  Function.hpp  FunctionDeduction.hpp  FunctionalInterface.hpp  Generator.hpp  Generator2.hpp  Hash.hpp  Hasher.hpp  Invoke.hpp  Random.hpp  Selector.hpp  Time.hpp  Transformer.hpp
src/graph/: Graph.hpp
src/iterable/: DelegateConstIterable.hpp  DelegateIterableDetails.hpp
src/iterator/: AddressIterator.hpp  FwdNodeIterator.hpp  HashTableIterator.hpp  Iterator.hpp  Sentinel.hpp
src/memory/: Allocator.hpp  ArraySizeManager.hpp  ByteStorage.hpp  LeakDetectionAllocator.hpp  Memory.hpp
src/meta/: Base.hpp  Compiler.hpp  Extension.hpp  FunctionTraits.hpp  IteratorTraits.hpp  ObjectTraits.hpp  Semantics.hpp  StdLib.hpp  StringTraits.hpp  TypeTraits.hpp  Utility.hpp
src/net/: Request.hpp  Socket.hpp
src/platform/: File.hpp  Path.hpp
src/policy/: RehashPolicy.hpp
src/primitive/: Boolean.hpp  Double.hpp  Float.hpp  Integer.hpp  Long.hpp  Object.hpp  Optional.hpp  Pair.hpp  ParallelSequence.hpp  Pointer.hpp  PrimitiveGenerator.hpp  Range.hpp  Reference.hpp  Regex.hpp  Sequence.hpp  SequencePrivate.hpp  String.cpp  String.hpp  StringParser.hpp  StringView.hpp  Tuple.hpp  Union.hpp  View.hpp
src/shared/: HashBaseFunction.hpp  Node.hpp
src/stdlib/: ostream.hpp  string.hpp  string_view.hpp
src/stream/: AbstractStream.hpp  InputStream.hpp  OutputStream.hpp  Stream.hpp
src/threading/: Async.hpp  Atomic.hpp  Lock.hpp  LockGuard.hpp  Mutex.hpp  Semaphore.hpp  Thread.hpp  Timer.hpp
test/: CMakeLists.txt
test/runner/dcr/: CMakeLists.txt  UnitTest.cpp  UnitTest.hpp
test/runner/dcr/src/: Assert.hpp  DCRMain.cpp  Dcr.cpp  Dcr.hpp  DcrMain.cpp  Test.cpp  Test.hpp
test/runner/gtest/: CMakeLists.txt  UnitTest.cpp  UnitTest.hpp
test/unit/: CMakeLists.txt  Compiler.test.cpp
(+1588 files in other folders)
